--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "glob": "^7.0.3",
     "html-loader": "^0.4.3",
+    "indexhtml-webpack-plugin": "^0.1.9",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
